[tool.poetry]
name = "holocron"
version = "0.1.0"
description = ""
authors = ["cassiobotaro <cassiobotaro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
scrapy = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
